<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_box">

    <fragment
        android:id="@+id/nav_box"
        android:name="com.example.shopping_list.ui.list_box.ListBoxFragment"
        android:label="@string/title_box"
        tools:layout="@layout/fragment_list_box" >
        <action
            android:id="@+id/action_nav_box_to_nav_product"
            app:destination="@id/nav_product" />
    </fragment>

    <fragment
        android:id="@+id/nav_product"
        android:name="com.example.shopping_list.ui.list_product.ListProductFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_list_product" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.shopping_list.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>