<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- В данном layout содержится верхняя часть, которая не будет изменяться при изменении состояния
    В данном кейсе его можно заменить на TextView с compound drawable, но я оставлю LinearLayout
    для наглядности-->
    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/simple_image"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_launcher_foreground"
            app:tint="#32CD32" />

        <TextView
            android:id="@+id/simple_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_and_image_in_linear_layout"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- В данном layout содержится разметка для collapsed состояния фрагмента -->
    <LinearLayout
        android:id="@+id/layout_collapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textStyle="italic"
            android:text="@string/text_about_something"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/some_element_for_example_recyclerview"
            android:textSize="32sp" />

    </LinearLayout>

    <!-- В данном layout содержится разметка для развёрнутого состояния фрагмента
    Изначально она находится в состоянии invisible и располагается под layout_top как и layout_collapsed-->
    <LinearLayout
        android:id="@+id/layout_expanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/first_line"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/second_line"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:gravity="center"
                android:text="@string/third_line"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/text_about_something"
            android:textSize="24sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:text="@string/some_bigger_element_for_example_bigger_recyclerview"
            android:textSize="36sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
