<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_margin_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorHeight="1dp"
        app:tabMode="scrollable"
        app:tabRippleColor="@null"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/bottom_sheet_margin_item"
        android:layout_height="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/bottom_sheet_margin_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_baseline_search_24"

        android:drawablePadding="8dp"
        android:fontFamily="More Fonts..."
        android:hint="@string/search_products"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/bottom_sheet_margin_item"
        android:paddingVertical="4dp"
        android:scrollHorizontally="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewpager" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_add_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/bottom_sheet_margin_horizontal"
        android:layout_marginTop="@dimen/bottom_sheet_margin_item"
        android:background="@drawable/edittext_background"
        android:drawableEnd="@drawable/ic_baseline_add_circle_24"
        android:drawablePadding="1dp"
        android:fontFamily="sans-serif-condensed"

        android:hint="@string/add_group"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/bottom_sheet_margin_item"
        android:paddingVertical="4dp"
        android:scrollHorizontally="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_select_products"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/bottom_sheet_margin_item"
        android:background="@drawable/button_background"
        android:paddingHorizontal="12dp"
        android:text="@string/select_product"
        app:layout_constraintEnd_toStartOf="@id/bt_add_products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_add_group" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_add_products"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginVertical="@dimen/bottom_sheet_margin_item"
        android:background="@drawable/button_background"
        android:paddingHorizontal="12dp"
        android:text="@string/add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_select_products"
        app:layout_constraintTop_toBottomOf="@id/et_add_group" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_add_products"/>

</androidx.constraintlayout.widget.ConstraintLayout>
